# dgi

./: Cargo.toml  README.md
crates/all/: Cargo.toml
crates/all/src/: lib.rs
crates/log/: Cargo.toml  README.md
crates/log/src/: assert.rs  event.rs  lib.rs  macros.rs  value.rs
crates/log/src/fmt/: builder.rs  mod.rs  state.rs  writer.rs
crates/log/src/impls/: alert.rs  console.rs  json.rs  mod.rs
crates/log/src/ser/: json.rs
crates/shell/: Cargo.toml
crates/shell/src/: app.rs  lib.rs
crates/shell/src/abs/: surface.rs
crates/shell/src/resource/: mod.rs  version.rs
crates/shell/src/resource/context/: adapter.rs  config.rs  context.rs  device.rs  instance.rs  mod.rs  surface.rs
crates/shell/src/util/: map_async.rs  mod.rs  or_else_async.rs
crates/test/: Cargo.toml
crates/test/src/: main.rs
