[package]
name = "dgi"
version = "0.1.0"
edition = "2024"

description = "Declarative Graphical Interface in Rust"
license = "Apache-2.0"
repository = "https://github.com/Sharp0802/dgi"

[dependencies]
dgi-log = { version = "0.1.0", path = "../log" }
dgi-shell = { version = "0.1.0", path = "../shell" }
