[package]
name = "dgi"
version = "0.2.1"
edition = "2024"

description = "Declarative Graphical Interface in Rust"
license = "Apache-2.0"
repository = "https://github.com/Sharp0802/dgi"
readme = "../../README.md"

[dependencies]
dgi-log = { version = "0.2.1", path = "../log" }
dgi-shell = { version = "0.2.1", path = "../shell" }
